--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,6 +1,9 @@
 <div class="field">
     <div class="card-stack">
-        <img *ngFor="let c of [0, 1, 2, 3, 4]; let i = index;" [ngStyle]="{'right.px': i * 5}" src="../../assets/img/cards/card_cover.png">
-
+        <img *ngFor="let c of [0, 1, 2, 3]; let i = index;" [ngStyle]="{'right.px': i * 5}" src="../../assets/img/cards/card_cover.png">
+        <img (click)="takeCard()" class="top-card" style="right: 25px" 
+            src="../../assets/img/cards/card_cover.png" alt="">
+        <img (click)="takeCard()" *ngIf="pickCardAnimation" class="top-card pickCardAnimation" style="right: 25px" 
+            src="../../assets/img/cards/spade_1.png">
     </div>
 </div>
