pick card animation  update

--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -29,6 +29,23 @@
 
 .pick-card {
     transition: all 125ms ease-in-out;
-    transform: scale(1.5);
+    transform: scale(1.5) !important;
+    animation: pick-card-animation 2s ease-in-out;
+}
+
+
+@keyframes pick-card-animation {
+    from {
+        transform: scale(1);
+    }
+    to {
+        transform: scale(1.7);
+    }
+    50% {
+        transform: scale(1.7);
+    }
+    100% {
+        transform: scale(1.7) translateX(50px);
+    }
 }
 
