pick a card animation finished

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -4,7 +4,7 @@
             src="../../assets/img/cards/card_cover.png">
         <img (click)="takeCard()" class="top-card" style="right: 25px" 
             src="../../assets/img/cards/card_cover.png">
-        <img (click)="takeCard()" *ngIf="pickCardAnimation" class="top-card pick-card" style="right: 25px" 
+        <img (click)="takeCard()" *ngIf="pickCardAnimation" class="pick-card" style="right: 25px" 
             src="../../assets/img/cards/spade_1.png">
     </div>
 </div>
