show right cards

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -5,6 +5,6 @@
         <img (click)="takeCard()" class="top-card" style="right: 25px" 
             src="../../assets/img/cards/card_cover.png">
         <img (click)="takeCard()" *ngIf="pickCardAnimation" class="pick-card" style="right: 25px" 
-            src="../../assets/img/cards/spade_1.png">
+            src="../../assets/img/cards/{{ currentCard }}.png">
     </div>
 </div>
