--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -1,4 +1,4 @@
 <div class="player">
   <img src="../../assets/img/profile/avatar.png" alt="">
-  <span>Name</span>
+  <span>{{ name }}</span>
 </div>
