--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,4 +1,5 @@
 <app-player  *ngFor="let player of game.players; let i = index;" [ngStyle]="{'top.px': 130 + i * 120}"  class="player-position" [name]="player"></app-player>
+
 <div class="field">
     <div class="card-stack">
         <!-- Stack for playable card -->
@@ -15,6 +16,9 @@
         <!-- Flying picked card-->
         <img (click)="takeCard()" *ngIf="pickCardAnimation" class="pick-card" style="right: 25px" 
         src="../../assets/img/cards/{{ currentCard }}.png">
-
     </div>
 </div>
+
+<button mat-fab color="primary" class="btn-add">
+    <mat-icon>add</mat-icon>
+</button>
