--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -19,6 +19,6 @@
     </div>
 </div>
 
-<button mat-fab color="primary" class="btn-add">
+<button mat-fab color="primary" class="btn-add" (click)="openDialog()">
     <mat-icon>add</mat-icon>
 </button>
