--- a/src/app/dialog-add-player/dialog-add-player.component.html
+++ b/src/app/dialog-add-player/dialog-add-player.component.html
@@ -1,1 +1,12 @@
-<p>dialog-add-player works!</p>
+<h1 mat-dialog-title>Add new player</h1>
+<div mat-dialog-content>
+  <p>Please enter player name.</p>
+  <mat-form-field appearance="fill">
+    <mat-label>Name</mat-label>
+    <input matInput [(ngModel)]="name">
+  </mat-form-field>
+</div>
+<div mat-dialog-actions>
+  <button mat-button (click)="onNoClick()">No Thanks</button>
+  <button mat-button [mat-dialog-close]="" cdkFocusInitial>Ok</button>
+</div>
