show active player

--- a/src/app/player/player.component.scss
+++ b/src/app/player/player.component.scss
@@ -2,10 +2,11 @@
   width: 300px;
   display: flex;
   align-items: center;
-  background-color: orange;
+  background-color: rgb(180, 180, 180);
   border-top-left-radius: 50px;
   border-bottom-left-radius: 50px;
   padding: 5px;
+  opacity: 0.6;
 
   span {
     font-size: 32px;
@@ -14,9 +15,14 @@
 
 
   img {
-    width: 100px;
-    height: 100px;
+    width: 60px;
+    height: 60px;
     object-fit: cover;
     border-radius: 50%;
   }
+}
+
+.player-active {
+  background-color: orange !important;
+  opacity: 1;
 }
