--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,4 +1,6 @@
-<app-player  *ngFor="let player of game.players; let i = index;" [ngStyle]="{'top.px': 130 + i * 120}"  class="player-position" [name]="player"></app-player>
+<app-player  *ngFor="let player of game.players; let i = index;" [ngStyle]="{'top.px': 130 + i * 80}"  class="player-position" 
+[playerActive]="i == game.currentPlayer" 
+[name]="player"></app-player>
 
 <div class="field">
     <div class="card-stack">
