--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -21,6 +21,8 @@
     </div>
 </div>
 
+<app-game-info class="pin-bottom"></app-game-info>
+
 <button mat-fab color="primary" class="btn-add" (click)="openDialog()">
     <mat-icon>add</mat-icon>
 </button>
