--- a/src/app/game-info/game-info.component.html
+++ b/src/app/game-info/game-info.component.html
@@ -1,6 +1,6 @@
 <mat-card>
   <mat-card-header>
-    <mat-card-title>Title</mat-card-title>
+    <mat-card-title>{{ title }}</mat-card-title>
   </mat-card-header>
-  <mat-card-content>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id cumque quas necessitatibus ad, laudantium nostrum nesciunt in! Repudiandae delectus quae tempora. Quia repellendus ab, ducimus in dolore quaerat maxime deserunt!</mat-card-content>
+  <mat-card-content>{{ description }}</mat-card-content>
 </mat-card>
