--- a/src/app/game-info/game-info.component.html
+++ b/src/app/game-info/game-info.component.html
@@ -1,6 +1,6 @@
 <mat-card>
   <mat-card-header>
-    <mat-card-title>{{ title }}</mat-card-title>
+    <mat-card-title>{{ card ? title : 'Please pick a card.' }}</mat-card-title>
   </mat-card-header>
-  <mat-card-content>{{ description }}</mat-card-content>
+  <mat-card-content>{{ card ? description : 'Click on card stack for choosing.' }}</mat-card-content>
 </mat-card>
