animation synchronisation - variables in game-model

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -16,12 +16,12 @@
         <img *ngFor="let cards of game.playedCards" class="played-card" src="assets/img/cards/{{ cards }}.png" alt="">
 
         <!-- Flying picked card-->
-        <img (click)="takeCard()" *ngIf="pickCardAnimation" class="pick-card" style="right: 25px" 
-        src="assets/img/cards/{{ currentCard }}.png">
+        <img (click)="takeCard()" *ngIf="game.pickCardAnimation" class="pick-card" style="right: 25px" 
+        src="assets/img/cards/{{ game.currentCard }}.png">
     </div>
 </div>
 
-<app-game-info [card]="currentCard" class="pin-bottom"></app-game-info>
+<app-game-info [card]="game.currentCard" class="pin-bottom"></app-game-info>
 
 <button mat-fab color="primary" class="btn-add" (click)="openDialog()">
     <mat-icon>add</mat-icon>
