--- a/src/app/start-screen/start-screen.component.scss
+++ b/src/app/start-screen/start-screen.component.scss
@@ -6,6 +6,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
+    @media (max-width: 960px) {
+        overflow: hidden;
+    }
 }
 
 #start-bg {
@@ -23,6 +27,10 @@
     img {
         width: 40vw;
         height: auto;
+
+        @media (max-width: 960px) {
+            width: 350px;
+        }
 
         &:hover {
             filter: brightness(1.25);
