--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -3,7 +3,7 @@
     max-width: 100%;
     height: 100vh;
     background: url('../../assets/img/board.jpg');
-    background-size: contain;
+    background-size: cover;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -30,13 +30,13 @@
 
 .played-card {
     right: 25px;
-    transform: scale(1.7) translateX(140px) translateY(-180px) rotate(-10deg);
+    transform: scale(1.3) translateX(140px) translateY(-180px) rotate(-10deg);
 }
 
 
 .pick-card {
     animation: pick-card-animation 1s ease-in-out;
-    transform: scale(1.7) translateX(140px) translateY(-180px) rotate(-10deg);
+    transform: scale(1.3) translateX(140px) translateY(-180px) rotate(-10deg);
 }
 
 
@@ -46,13 +46,13 @@
         transform: scale(1);
     }
     40% {
-        transform: scale(1.7);
+        transform: scale(1.3);
     }
     60% {
-        transform: scale(1.7);
+        transform: scale(1.3);
     }
     100% {
-        transform: scale(1.7) translateX(140px) translateY(-180px) rotate(-10deg);
+        transform: scale(1.3) translateX(140px) translateY(-180px) rotate(-10deg);
     }
 }
 
@@ -73,5 +73,23 @@
     bottom: 32px;
     left: 100px;
     right: 100px;
+
+    @media (max-width: 720px) {
+        left: 0;
+        right: 0;
+        bottom: 0;
+        border-radius: 0;
+    }
+
+}
+
+.scroll-container {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    display: flex;
+    gap: 8px;
+    overflow-y: auto;
 }
 
