--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,5 +3,23 @@
     padding: 0; 
     box-sizing: border-box;
 }
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+html {
+    overflow: hidden;
+}
+
+
+@media (min-width: 720px) {
+    .hide-desktop {
+        display: none;
+    }  
+}
+
+@media (max-width: 720px) {
+    .hide-mobile {
+        display: none;
+    }
+}
