--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -93,3 +93,11 @@
     overflow-y: auto;
 }
 
+app-player, app-player-mobile {
+    cursor: pointer;
+
+    &:hover {
+        filter: brightness(1.15);
+    }
+}
+
