--- a/src/app/player-mobile/player-mobile.component.html
+++ b/src/app/player-mobile/player-mobile.component.html
@@ -1,4 +1,4 @@
 <div class="player" [class.player-active]="playerActive">
   <span>{{ name }}</span>
-  <img src="assets/img/profile/avatar.png" alt="">
+  <img src="../../assets/img/profile/{{ playerImage }}.png" alt="">
 </div>
