--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -1,4 +1,4 @@
 <div class="player" [class.player-active]="playerActive">
-  <img src="../../assets/img/profile/{{ playerImage }}.png" alt="">
+  <img src="../../assets/img/profile/{{ profileImage }}.png" alt="">
   <span>{{ name }}</span>
 </div>
