--- a/src/app/edit-player/edit-player.component.html
+++ b/src/app/edit-player/edit-player.component.html
@@ -1,1 +1,6 @@
+<h1 mat-dialog-title>Edit Player</h1>
 <img class="profile-picture" [mat-dialog-close]="pic" *ngFor="let pic of allProfilePictures" src="../../assets/img/profile/{{ pic }}.png" alt="">
+<div mat-dialog-actions>
+  <button mat-button (click)="dialogRef.close()">Close</button>
+  <button mat-button color="warn" [mat-dialog-close]="'DELETE'" cdkFocusInitial>Delete</button>
+</div>
