--- a/src/app/edit-player/edit-player.component.scss
+++ b/src/app/edit-player/edit-player.component.scss
@@ -1,10 +1,18 @@
+.dialog {
+  padding: 15px 20px;
+}
+
 .profile-picture {
-  width: 100px;
-  height: 100px;
+  width: 90px;
+  height: 90px;
   border-radius: 50%;
   cursor: pointer;
 
   &:hover {
     filter: brightness(1.15);
   }
+}
+
+.mat-mdc-dialog-actions {
+  margin-top: 15px;
 }
