--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -101,3 +101,17 @@ app-player, app-player-mobile {
     }
 }
 
+.layer {
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba($color: #000000, $alpha: 1);
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+    }
+}
