--- a/src/app/player/player.component.scss
+++ b/src/app/player/player.component.scss
@@ -1,5 +1,6 @@
 .player {
-  width: 300px;
+  overflow: hidden;
+  width: 270px;
   display: flex;
   align-items: center;
   background-color: rgb(180, 180, 180);
@@ -9,14 +10,17 @@
   opacity: 0.6;
 
   span {
-    font-size: 32px;
+    font-size: 24px;
     margin-left: 16px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
   }
 
 
   img {
-    width: 60px;
-    height: 60px;
+    width: 50px;
+    height: 50px;
     object-fit: cover;
     border-radius: 50%;
   }
