--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -115,3 +115,8 @@ app-player, app-player-mobile {
         object-fit: contain;
     }
 }
+
+.preloadImage {
+    opacity: 0;
+    z-index: -99999;
+}
